--- a/.github/workflows/sbirs-geo-6.yml
+++ b/.github/workflows/sbirs-geo-6.yml
@@ -11,6 +11,6 @@ jobs:
       - name: Fetch data 
         uses: githubocto/flat@v3
         with:
-          http_url: https://celestrak.com/NORAD/elements/active.txt
-          downloaded_filename: active.txt
+          http_url: http://celestrak.org/NORAD/elements/gp.php?CATNR=53356&FORMAT=TLE
+          downloaded_filename: 53356.txt
 
